--- a/tools/config-generator/templates/prow_postsubmit_gocoverage_job.yaml
+++ b/tools/config-generator/templates/prow_postsubmit_gocoverage_job.yaml
@@ -16,3 +16,4 @@
         - "--artifacts=$(ARTIFACTS)"
         - "--cov-threshold-percentage=0"
         [[indent_section 8 "resources" .Base.Resources]]
+        [[indent_section 8 "env" .Base.Env]]
