--- a/images/prow-tests/Makefile
+++ b/images/prow-tests/Makefile
@@ -15,8 +15,13 @@
 IMAGE_NAME = prow-tests
 include ../simple-image.mk
 
+push_coverage_dev: build
+	docker tag $(IMG):$(TAG) $(IMG):coverage-dev
+	docker push $(IMG):coverage-dev
+
 push_beta: confirm-master build
 	docker tag $(IMG):$(TAG) $(IMG):beta
 	docker push $(IMG):beta
 
 push:: push_beta
+
