--- a/config/staging/prow/cluster/500-needs-rebase.yaml
+++ b/config/staging/prow/cluster/500-needs-rebase.yaml
@@ -37,6 +37,7 @@ spec:
         imagePullPolicy: Always
         args:
         - --dry-run=false
+        - --github-token-path=/etc/github/oauth
         - --github-endpoint=http://ghproxy
         - --github-endpoint=https://api.github.com
         ports:
