--- a/config/prod/prow/core/config.yaml
+++ b/config/prod/prow/core/config.yaml
@@ -123,7 +123,6 @@ tide:
     - "google/knative-gcp"
     - "knative-sandbox/eventing-kafka"
     - "knative-sandbox/eventing-rabbitmq"
-    - "knative-sandbox/operator"
     - "knative/caching"
     - "knative/client"
     - "knative/client-contrib"
@@ -137,6 +136,7 @@ tide:
     - "knative/net-http01"
     - "knative/net-istio"
     - "knative/net-kourier"
+    - "knative/operator"
     - "knative/pkg"
     - "knative/sample-controller"
     - "knative/sample-source"
